Fixing the object detection issue
